--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Project specific
 *.pyc
 dist
 MANIFEST
+
+# OS or Editor folders
+.DS_Store
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
