--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ python:
    - "3.2"
    - "pypy"
 
-install: pip install esclient
+install:
+   - pip install requests
+   - python setup.py install
 
 script: python test_esclient.py
