--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
    - "pypy"
 
 install:
-   - pip install requests
+   - pip install requests simplejson
    - python setup.py install
 
 script: python test_esclient.py
