Fix dependencies for travis with Python 3.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ python:
 
 install:
    - pip install requests simplejson
+   - if [[ $TRAVIS_PYTHON_VERSION == '2.5' ]]; then pip install chardet2 
    - python setup.py install
 
 script: python test_esclient.py
