--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
-language: python
+language:
+   - python
 
-services: elasticsearch
+services:
+   - elasticsearch
 
 python:
    - "2.5"
@@ -16,4 +18,5 @@ install:
    - pip install requests simplejson argparse
    - python setup.py install
 
-script: python test_esclient.py
+script:
+   - python test_esclient.py
